Cacti CHANGELOG

SVN
-bug#0001504: no newline fix
-bug#0001568: Cacti currently gives a lot of warnings of deprecated functions on PHP 5.3
-bug#0001632: script server treats quoted arguments with spaces as multiple separate arguments
-bug#0001768: perform consistency check on ds maximum vs. ds minimum
-bug#0001815: 1-minute with 5-minute crontab broken
-bug#0001816: Cannot export graph data to CSV with IE 8 (8.0.7600.16385) 
-bug#0001885: ping.pl does not account for ping using icmp_req rather than icmp_seq in some versions of ping 
-bug#0001880: When Performing Form Validation Error Message Areas Not Highlighted Upon Form Save
-bug#0001903: Undefined variable: mode in lib/ldap.php on line 375 
-bug: accept "Connection refused" on TCP ping tests
-bug: add missing row selection to graph preview
-bug: script server throws "undefined variable" error when in debug mode
-bug: Removing graphs was not taking advantage of bulk deletes causing major slowdowns
-bug: Add some command escaping
-bug: Change default font sizes
-bug: when using template and serach filter on graph management, sql error occurs

0.8.7g
-bug: RRDTool 1.4.x not recognized during installation
-bug: Implement windows-aware shell escaping
-bug: Fixed multiple cross site scripting vulnerabilities reported by Tomas Hoger of the Red Hat Security Response Team
-bug#0001292: Over 8TByte Partition in Windows cant get correct data from snmp 
-bug#0001486: Unable to login after redirection to access denied page
-bug#0001516: "Show the page that user pointed their browser" does not seem to work
-bug#0001561: Over zelous HTML excaping on filter strings
-bug#0001575: LDAP-Authentifications does not work due to ldap_host being set incorrect
-bug#0001587: Feature from bug#0001271 breaks on large values 
-bug#0001607: Web Basic authentication does not work with fastcgi 
-bug#0001620: Max OID's max value reported incorrectly in Web UI
-bug#0001747: oid_suffix do not work correctly for input direction on data queries 