@@ -229,4 +229,45 @@ function shift_time(&$span, $direction, $shift_size) {
 	$_POST["predefined_timespan"] = GT_CUSTOM;
 }
 
+/** date_time_format		create a format string for date/time
+ * @param string returns	date time format
+ */
+function date_time_format() {
+	global $config;
+
+	$graph_date = "";
+
+	/* setup date format */
+	$date_fmt = read_graph_config_option("default_date_format");
+	$datechar = read_graph_config_option("default_datechar");
+
+	switch ($datechar) {
+		case GDC_HYPHEN: 	$datechar = "-"; break;
+		case GDC_SLASH: 	$datechar = "/"; break;
+		case GDC_DOT:	 	$datechar = "."; break;
+	}
+
+	switch ($date_fmt) {
+		case GD_MO_D_Y:
+			$graph_date = "m" . $datechar . "d" . $datechar . "Y H:i:s";
+			break;
+		case GD_MN_D_Y:
+			$graph_date = "M" . $datechar . "d" . $datechar . "Y H:i:s";
+			break;
+		case GD_D_MO_Y:
+			$graph_date = "d" . $datechar . "m" . $datechar . "Y H:i:s";
+			break;
+		case GD_D_MN_Y:
+			$graph_date = "d" . $datechar . "M" . $datechar . "Y H:i:s";
+			break;
+		case GD_Y_MO_D:
+			$graph_date = "Y" . $datechar . "m" . $datechar . "d H:i:s";
+			break;
+		case GD_Y_MN_D:
+			$graph_date = "Y" . $datechar . "M" . $datechar . "d H:i:s";
+			break;
+	}
+	return $graph_date;
+}
+
 ?>
