@@ -5,6 +5,7 @@ SVN
 -bug#0001568: Cacti currently gives a lot of warnings of deprecated functions on PHP 5.3
 -bug#0001632: script server treats quoted arguments with spaces as multiple separate arguments
 -bug#0001768: perform consistency check on ds maximum vs. ds minimum
+-bug#0001783: Graph Export: The ExportDate is wrong -> we will print current time and number of graphs, then
 -bug#0001815: 1-minute with 5-minute crontab broken
 -bug#0001816: Cannot export graph data to CSV with IE 8 (8.0.7600.16385) 
 -bug#0001885: ping.pl does not account for ping using icmp_req rather than icmp_seq in some versions of ping 
@@ -16,7 +17,7 @@ SVN
 -bug: Removing graphs was not taking advantage of bulk deletes causing major slowdowns
 -bug: Add some command escaping
 -bug: Change default font sizes
--bug: when using template and serach filter on graph management, sql error occurs
+-bug: when using template and search filter on graph management, sql error occurs
 
 0.8.7g
 -bug: RRDTool 1.4.x not recognized during installation
